Make RWHIER drop pinch gesture event if target does not support it

RenderWidgetHostInputEventRouter sends all pinch gesture event to root
frame, but this might be a problem when the subframe has touch action
restrictions.

To avoid allowing pinch zoom when the target element in the subframe has
touch-action:none property, this CL makes RWHIER checks the target frame
and drop the event if touch action filter rejects the pinch.

Bug: 827182
Change-Id: Ifa566446e8c695d934aad4bcaaef49af0cde76e2
Reviewed-on: https://chromium-review.googlesource.com/1007892
Reviewed-by: James MacLean <wjmaclean@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Commit-Queue: Xianda Sun <sunxd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553778}
Former-commit-id: 1767e4163a9955bf94ef6bf1ed055c7899259a4f